fix: corrected spacing issues with navbar

--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ a {
   padding: 0;
 }
 
+a i, a span {
+  color: var(--dark_grey);
+}
+
 /* header styles */ 
 
 header {
@@ -96,85 +100,44 @@ header img {
 /* nav bar which appears and follows as you scroll */
 
 .nav-bar {
-  position: fixed;
-  top: 0;
-  z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-top: 2.5vh;
   width: 100vw;
 
-  background: var(--light_grey);
-  transition: all 0.5s ease;
+  padding: 0.625em 0; /* 10px 0px equivalent */
+  background: var(--dark_grey);
 }
 
-#banner {
-  transition: background 0.5s ease;
-  background-color: var(--primary_color);
-  height: 0.625em /* 10px equivalent */;
+#left-side, #right-side {
+  margin: 0 3.75em; /* 0 60px equivalent */
 }
 
-#nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  padding: 0.625em 1.25em /* 10px 20px equivalent */;
-  font-size: 1em;
-}
-
-#nav div {
-  margin: 0 0.625em;
-}
-
-#nav #right-side {
+#right-side {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-#nav #right-side img {
+.nav-bar img {
   /* equivalent of 50px x 50px */
   height: 3.125em;
   width: 3.125em;
-  margin: 0 0.625em;
 }
 
-.nav-bar:hover .nav-link, .nav-bar:hover .nav-link a {
+.nav-link i {
   color: var(--white);
 }
 
-.nav-bar:hover #banner {
-  background-color: var(--light_grey);
+#right-side .nav-link {
+  margin: 0 1.25em;
+  transition: 0.5s ease;
 }
 
-.nav-bar:hover {
-  background-color: var(--primary_color);
-}
-
-/* styling for links */
-
-.links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav-link {
-  transition: border 0.5s;
-}
-
-.nav-link, .nav-link a {
-  color: var(--dark_grey);
-}
-
-.nav-link:hover {
-  border-bottom: 1px solid var(--white);
-}
-
-a i, a span {
-  color: var(--dark_grey);
-}
-  
-a:hover i, a:hover span {
-  color: var(--primary_color);
+#right-side .nav-link:hover {
+  transform: scale(1.1);
 }
 
 /* personal info */
@@ -185,31 +148,36 @@ a:hover i, a:hover span {
   align-items: center;
   justify-content: center;
 
-  margin: 5vh auto;
+  margin: 2.5vh auto;
   max-width: 50em;
   line-height: 1.5;
 }
 
-.personal-info h1 {
-  margin: 0;
-}
-
 .title {
+  margin-top: 0;
   font-weight: bold;
   font-size: 2.5em;
   color: var(--primary_color);
 }
 
+#personal-desc {
+  margin-top: 0;
+}
+
 /* redirect links */
 
-.redirect {
+.redirect-links {
   width: 100%;
   height: 100%;
   margin: 0;
   max-width: 50em;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.redirect a {
+.redirect-links a {
   border: 1px solid var(--primary_color);
   border-radius: 290486px;
   transition: all 0.2s ease-out;
@@ -220,31 +188,29 @@ a:hover i, a:hover span {
   color: var(--white);
 }
 
-.redirect a:hover {
+.redirect-links a:hover {
   background: var(--primary_color);
   color: var(--white);
 }
 
-.redirect a:hover i, .redirect a:hover span {
+.redirect-links a:hover i, .redirect-links a:hover span {
   color: var(--white);
 }
 
 /* project portfolio styles */
 
 #portfolio-container {
+  margin-top: 2.5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  margin: 5vh auto;
 }
 
 #portfolio-grid {
   aspect-ratio: 2 / 1;
   width: 80vw;
   margin: 0 auto;
-  padding: 2.5vw 0;
 
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
